--- a/POL_l_english.yml
+++ b/POL_l_english.yml
@@ -1656,123 +1656,123 @@
  ABILITY_ARMOURED_TRAINS_TOOLTIP:0 "Armoured Trains ($LEADER$)"
  ABILITY_ARMOURED_TRAINS_DESC:0 "Your armies will get a significant bonus to reinforce rate and a slight defensive bonus."
  ##PARTIES
- POL_monarchy_party_long:0 "Monarchists"
- POL_monarchy_party:0 "Monarchists"
+ POL_monarchy_party_long:0 "군주주의자"
+ POL_monarchy_party:0 "군주주의자"
  POL_OZN_party:0 "OZN"
- POL_OZN_party_long:0 "Camp of National Unity"
+ POL_OZN_party_long:0 "국민협동기지"
  POL_POS_party:0 "POS"
- POL_POS_party_long:0 "Common Organization of the Society"
- POL_neutrality_party_long:0 "Nonpartisan Bloc for Cooperation with the Government"
- POL_democratic:0 "Polish Republic"
- POL_democratic_DEF:0 "The Polish Republic"
- POL_fascism:0 "Falangist Poland"
- POL_fascism_DEF:0 "Falangist Poland"
- POL_neutrality:0 "Poland"
- POL_neutrality_DEF:0 "Poland"
- POL_communism:0 "Polish People's Republic"
- POL_communism_DEF:0 "The Polish People's Republic"
- POL_GER_autonomy_dominion:0 "Poland"
- POL_GER_autonomy_dominion_DEF:0 "Poland"
- POL_GER_fascism_autonomy_puppet:0 "Generalgouvernement"
- POL_GER_fascism_autonomy_puppet_DEF:0 "The Generalgouvernement"
- POLS_democratic:0 "Third Polish Republic"
- POLS_democratic_DEF:0 "The Third Polish Republic"
- POLS_fascism:0 "Nationalist Poland"
- POLS_fascism_DEF:0 "Nationalist Poland"
- POLS_neutrality:0 "Polish State"
- POLS_neutrality_DEF:0 "Polish State"
- POLS_communism:0 "Polish People's Republic"
- POLS_communism_DEF:0 "The Polish People's Republic"
- POLS_GER_autonomy_dominion:0 "Polish State"
- POLS_GER_autonomy_dominion_DEF:0 "The Polish State"
- POLS_GER_autonomy_puppet:0 "Generalgouvernement"
- POLS_GER_autonomy_puppet_DEF:0 "The Generalgouvernement"
- POLG_democratic:0 "Third Polish Republic"
- POLG_democratic_DEF:0 "The Third Polish Republic"
- #POLG_fascism:0 "Generalgouvernement"
- #POLG_fascism_DEF:0 "The Generalgouvernement"
- POLG_neutrality:0 "Poland"
- POLG_neutrality_DEF:0 "Poland"
- POLG_communism:0 "Polish People's Republic"
- POLG_communism_DEF:0 "The Polish People's Republic"
- POLG_GER_autonomy_dominion:0 "Polish State"
- POLG_GER_autonomy_dominion_DEF:0 "The Polish State"
- POLG_GER_fascism_autonomy_puppet:0 "Generalgouvernement"
- POLG_GER_fascism_autonomy_puppet_DEF:0 "The Generalgouvernement"
- POLD_democratic:0 "Third Polish Republic"
- POLD_democratic_DEF:0 "The Third Polish Republic"
- POLD_fascism:0 "Nationalist Poland"
- POLD_fascism_DEF:0 "Nationalist Poland"
- POLD_neutrality:0 "Poland"
- POLD_neutrality_DEF:0 "Poland"
- POLD_communism:0 "Polish People's Republic"
- POLD_communism_DEF:0 "The Polish People's Republic"
- POLD_GER_autonomy_dominion:0 "Polish State"
- POLD_GER_autonomy_dominion_DEF:0 "The Polish State"
- POLD_GER_autonomy_puppet:0 "Polish State"
- POLD_GER_autonomy_puppet_DEF:0 "The Polish State"
- POLM_democratic:0 "Polish Republic"
- POLM_democratic_DEF:0 "The Polish Republic"
- POLM_fascism:0 "Falangist Poland"
- POLM_fascism_DEF:0 "Falangist Poland"
- POLM_neutrality:0 "Kingdom of Poland"
- POLM_neutrality_DEF:0 "The Kingdom of Poland"
- POLM_communism:0 "Polish People's Republic"
- POLM_communism_DEF:0 "The Polish People's Republic"
- CZESLO_fascism:0 "Slovakia"
- CZESLO_fascism_DEF:0 "Slovakia"
- CZESLO_democratic:0 "Slovak Republic"
- CZESLO_democratic_DEF:0 "The Slovak Republic"
- CZESLO_neutrality:0 "Free State of Slovakia"
- CZESLO_neutrality_DEF:0 "The Free State of Slovakia"
- CZESLO_communism:0 "Slovak Socialist Republic"
- CZESLO_communism_DEF:0 "The Slovak Socialist Republic"
- CZESLO_fascism_ADJ:0 "Slovakian"
- CZESLO_democratic_ADJ:0 "Slovakian"
- CZESLO_neutrality_ADJ:0 "Slovakian"
- CZESLO_communism_ADJ:0 "Slovakian"
+ POL_POS_party_long:0 "사회 공통조직"
+ POL_neutrality_party_long:0 "정부협조 무당파 의원단"
+ POL_democratic:0 "폴란드 공화국"
+ POL_democratic_DEF:0 "폴란드 공화국"
+ POL_fascism:0 "팔랑헤주의 폴란드"
+ POL_fascism_DEF:0 "팔랑헤주의 폴란드"
+ POL_neutrality:0 "폴란드"
+ POL_neutrality_DEF:0 "폴란드"
+ POL_communism:0 "폴란드 인민 공화국"
+ POL_communism_DEF:0 "폴란드 인민 공화국"
+ POL_GER_autonomy_dominion:0 "폴란드"
+ POL_GER_autonomy_dominion_DEF:0 "폴란드"
+ POL_GER_autonomy_puppet:0 "총독부"
+ POL_GER_autonomy_puppet_DEF:0 "총독부"
+ POLS_democratic:0 "폴란드 제3공화국"
+ POLS_democratic_DEF:0 "폴란드 제3공화국"
+ POLS_fascism:0 "폴란드 국민전선"
+ POLS_fascism_DEF:0 "폴란드 국민전선"
+ POLS_neutrality:0 "폴란드국"
+ POLS_neutrality_DEF:0 "폴란드국"
+ POLS_communism:0 "폴란드 인민 공화국"
+ POLS_communism_DEF:0 "폴란드 인민 공화국"
+ POLS_GER_autonomy_dominion:0 "폴란드국tate"
+ POLS_GER_autonomy_dominion_DEF:0 "폴란드국"
+ POLS_GER_autonomy_puppet:0 "총독부"
+ POLS_GER_autonomy_puppet_DEF:0 "총독부"
+ POLG_democratic:0 "폴란드 제3공화국"
+ POLG_democratic_DEF:0 "폴란드 제3공화국"
+# POLG_fascism:0 "총독부"
+# POLG_fascism_DEF:0 "총독부"
+ POLG_neutrality:0 "폴란드"
+ POLG_neutrality_DEF:0 "폴란드"
+ POLG_communism:0 "폴란드 인민 공화국"
+ POLG_communism_DEF:0 "폴란드 인민 공화국"
+ POLG_GER_autonomy_dominion:0 "폴란드국"
+ POLG_GER_autonomy_dominion_DEF:0 "폴란드국"
+ POLG_GER_autonomy_puppet:0 "총독부"
+ POLG_GER_autonomy_puppet_DEF:0 "총독부"
+ POLD_democratic:0 "폴란드 제3공화국"
+ POLD_democratic_DEF:0 "폴란드 제3공화국"
+ POLD_fascism:0 "폴란드 국민전선"
+ POLD_fascism_DEF:0 "폴란드 국민전선"
+ POLD_neutrality:0 "폴란드"
+ POLD_neutrality_DEF:0 "폴란드"
+ POLD_communism:0 "폴란드 인민 공화국"
+ POLD_communism_DEF:0 "폴란드 인민 공화국"
+ POLD_GER_autonomy_dominion:0 "폴란드국"
+ POLD_GER_autonomy_dominion_DEF:0 "폴란드국"
+ POLD_GER_autonomy_puppet:0 "폴란드국"
+ POLD_GER_autonomy_puppet_DEF:0 "폴란드국"
+ POLM_democratic:0 "폴란드 공화국"
+ POLM_democratic_DEF:0 "폴란드 공화국"
+ POLM_fascism:0 "팔랑헤주의 폴란드"
+ POLM_fascism_DEF:0 "팔랑헤주의 폴란드"
+ POLM_neutrality:0 "폴란드 왕국"
+ POLM_neutrality_DEF:0 "폴란드 왕국"
+ POLM_communism:0 "폴란드 인민 공화국"
+ POLM_communism_DEF:0 "폴란드 인민 공화국"
+ CZESLO_fascism:0 "슬로바키아"
+ CZESLO_fascism_DEF:0 "슬로바키아"
+ CZESLO_democratic:0 "슬로바키아 공화국"
+ CZESLO_democratic_DEF:0 "슬로바키아 공화국"
+ CZESLO_neutrality:0 "슬로바키아 자유국"
+ CZESLO_neutrality_DEF:0 "슬로바키아 자유국"
+ CZESLO_communism:0 "슬로바키아 사회주의 공화국"
+ CZESLO_communism_DEF:0 "슬로바키아 사회주의 공화국"
+ CZESLO_fascism_ADJ:0 "슬로바키아"
+ CZESLO_democratic_ADJ:0 "슬로바키아"
+ CZESLO_neutrality_ADJ:0 "슬로바키아"
+ CZESLO_communism_ADJ:0 "슬로바키아"
  POL_PZPR_party:0 "PZPR"
- POL_PZPR_party_long:0 "Polish United Workers' Party"
+ POL_PZPR_party_long:0 "폴란드 연합노동자당"
  POL_PPR_party:0 "PPR"
- POL_PPR_party_long:0 "Polish Workers' Party"
+ POL_PPR_party_long:0 "폴란드 노동자당"
  POL_KPP_party:0 "KPP"
- POL_KPP_party_long:0 "Communist Party of Poland"
- POLPLC_democratic:0 "Republic of Poland-Lithuania"
- POLPLC_democratic_DEF:0 "The Republic of Poland-Lithuania"
- POLPLC_fascism:0 "Falangist Poland-Lithuania"
- POLPLC_fascism_DEF:0 "Falangist Poland-Lithuania"
- POLPLC_neutrality:0 "Polish-Lithuanian Commonwealth"
- POLPLC_neutrality_DEF:0 "The Polish-Lithuanian Commonwealth"
- POLPLC_communism:0 "Polish-Lithuanian People's Republic"
- POLPLC_communism_DEF:0 "The Polish-Lithuanian People's Republic"
- POLPLRC_democratic:0 "Republic of Poland-Lithuania-Ruthenia"
- POLPLRC_democratic_DEF:0 "The Republic of Poland-Lithuania-Ruthenia"
- POLPLRC_fascism:0 "Falangist Poland-Lithuania-Ruthenia"
- POLPLRC_fascism_DEF:0 "Falangist Poland-Lithuania-Ruthenia"
- POLPLRC_neutrality:0 "Polish-Lithuanian-Ruthenian Commonwealth"
- POLPLRC_neutrality_DEF:0 "The Polish-Lithuanian-Ruthenian Commonwealth"
- POLPLRC_communism:0 "Polish-Lithuanian-Ruthenian People's Republic"
- POLPLRC_communism_DEF:0 "The Polish-Lithuanian-Ruthenian People's Republic"
- DOU_fascism:0 "Insurgent Ukraine"
- DOU_fascism_DEF:0 "Insurgent Ukraine"
- DOU_neutrality:0 "Directorate of Ukraine"
- DOU_neutrality_DEF:0 "the Directorate of Ukraine"
- DOU_democratic:0 "Ukrainian People's Republic"
- DOU_democratic_DEF:0 "the Ukrainian People's Republic"
- DOU_communism:0 "Ukrainian Socialist Republic"
- DOU_communism_DEF:0 "the Ukrainian Socialist Republic"
- DOU_fascism_ADJ:0 "Ukrainian"
- DOU_democratic_ADJ:0 "Ukrainian"
- DOU_neutrality_ADJ:0 "Ukrainian"
- DOU_communism_ADJ:0 "Ukrainian"
+ POL_KPP_party_long:0 "폴란드 공산당"
+ POLPLC_democratic:0 "폴란드-리투아니아 공화국"
+ POLPLC_democratic_DEF:0 "폴란드-리투아니아 공화국"
+ POLPLC_fascism:0 "팔랑헤주의 폴란드-리투아니아"
+ POLPLC_fascism_DEF:0 "팔랑헤주의 폴란드-리투아니아"
+ POLPLC_neutrality:0 "폴란드-리투아니아 연방"
+ POLPLC_neutrality_DEF:0 "폴란드-리투아니아 연방"
+ POLPLC_communism:0 "폴란드-리투아니아 인민 공화국"
+ POLPLC_communism_DEF:0 "폴란드-리투아니아 인민 공화국"
+ POLPLRC_democratic:0 "폴란드-리투아니아-루테니아 공화국"
+ POLPLRC_democratic_DEF:0 "폴란드-리투아니아-루테니아 공화국"
+ POLPLRC_fascism:0 "팔랑헤주의 폴란드-리투아니아-루테니아"
+ POLPLRC_fascism_DEF:0 "팔랑헤주의 폴란드-리투아니아-루테니아"
+ POLPLRC_neutrality:0 "폴란드-리투아니아-루테니아 연방"
+ POLPLRC_neutrality_DEF:0 "폴란드-리투아니아-루테니아 연방"
+ POLPLRC_communism:0 "폴란드-리투아니아-루테니아 인민 공화국"
+ POLPLRC_communism_DEF:0 "폴란드-리투아니아-루테니아 인민 공화국"
+ DOU_fascism:0 "우크라이나 봉기군"
+ DOU_fascism_DEF:0 "우크라이나 봉기군"
+ DOU_neutrality:0 "우크라이나 총재정부"
+ DOU_neutrality_DEF:0 "우크라이나 총재정부"
+ DOU_democratic:0 "우크라이나 인민 공화국"
+ DOU_democratic_DEF:0 "우크라이나 인민 공화국"
+ DOU_communism:0 "우크라이나 사회주의 공화국"
+ DOU_communism_DEF:0 "우크라이나 사회주의 공화국"
+ DOU_fascism_ADJ:0 "우크라이나"
+ DOU_democratic_ADJ:0 "우크라이나"
+ DOU_neutrality_ADJ:0 "우크라이나"
+ DOU_communism_ADJ:0 "우크라이나"
  DOU_fascism_party:0 "OUN"
- DOU_fascism_party_long:0 "Organization of Ukrainian Nationalists"
+ DOU_fascism_party_long:0 "우크라이나 국가주의자 조직"
  DOU_democratic_party:0 "UNDO"
- DOU_democratic_party_long:0 "Ukrainian National Democratic Alliance"
+ DOU_democratic_party_long:0 "우크라이나 국가 민주연합"
  DOU_communism_party:0 "UCP"
- DOU_communism_party_long:0 "Ukrainian Communist Party"
+ DOU_communism_party_long:0 "우크라이나 공산당"
  DOU_neutrality_party:0 "USDLP"
- DOU_neutrality_party_long:0 "Ukrainian Social Democratic Labour Party"
+ DOU_neutrality_party_long:0 "우크라이나 사회민주노동당"
  ##Equipment
  #AIR
  POL_fighter_equipment_0:0 "PZL.11"
@@ -1871,38 +1871,38 @@
  POL_modern_tank_equipment_1:0 "57TP Ułan"
  POL_modern_tank_equipment_1_short:0 "Ułan"
  #NAVAL
- POL_submarine_1:0 "Wilk Class "
+ POL_submarine_1:0 "빌크급"
  POL_submarine_1_desc:0 "The Wilk class consisted of three submarines built by the French for the Polish Navy and commissioned in the early 1930s. They were based on the French Saphir-class design. They were fairly large submarines, displacing nearly 1,000 tons. They were armed with six 550mm torpedo tubes and could dive up to 80m."
- POL_submarine_2:0 "Orzeł Class "
+ POL_submarine_2:0 "오제우급"
  POL_submarine_2_desc:0 "The Orzeł class consisted of two Submarines built in the Netherlands for the Polish Navy. The ships were completed just months before the German invasion. They were large submarines, displacing 1,100 tons. They were armed with twelve 550mm torpedo tubes and had a diving depth of 80m."
- POL_submarine_3:0 "Sokół Class"
+ POL_submarine_3:0 "소쿠급"
  POL_submarine_3_desc:0 "The Orzeł class consisted of two Submarines built in the Netherlands for the Polish Navy. The ships were completed just months before the German invasion. They were large submarines, displacing 1,100 tons. They were armed with twelve 550mm torpedo tubes and had a diving depth of 80m."
- POL_submarine_4:0 "Delfin Class"
- POL_destroyer_1:0 "Wicher Class "
+ POL_submarine_4:0 "델핀급"
+ POL_destroyer_1:0 "비헤르급"
  POL_destroyer_1_desc:0 "The two Wicher-class destroyers were the first large surface ships of the Polish Navy, and were commissioned between 1930 and 1932. They were large, displacing 1,540 tons. As designed, they were armed with four 130mm/40 M1924 guns, though these were upgraded to 120mm Swedish guns just before the German invasion. Their torpedo tubes and AA armament were improved as well."
- POL_destroyer_2:0 "Grom Class "
+ POL_destroyer_2:0 "그롬급"
  POL_destroyer_2_desc:0 "The two destroyers of the Grom class were built in Britain for the Polish Navy and commissioned in 1937. They were among the largest and fastest destroyers of World War II. They displaced nearly 2,000 tons and were armed with five 120mm/50 caliber Bofors M34 cannon in their main armament. They also had six 533mm torpedo tubes and a good ASW complement."
- POL_destroyer_3:0 "Piorun Class"
+ POL_destroyer_3:0 "피오룬급"
  POL_destroyer_3_desc:0 "The Polish destroyer Piorun was a British N-class destroyer built for Polish Navy in exile and commissioned in 1940. It displaced 1,770 tons and had decent speed and reliability. It was armed with six 120mm/45 QF Mk XII cannon as its main guns, and also had five 533mm torpedo tubes, decent ASW equipment, and the then latest British radar and sonar."
- POL_destroyer_4:0 "Burza Class"
- POL_light_cruiser_1:0 "Warszawa Class"
- POL_light_cruiser_2:0 "Łódź Class"
- POL_light_cruiser_3:0 "Lwów Class"
- POL_light_cruiser_4:0 "Poznań Class"
- POL_heavy_cruiser_1:0 "Niemen Class"
- POL_heavy_cruiser_2:0 "Wisła Class"
- POL_heavy_cruiser_3:0 "Żuk Class"
- POL_heavy_cruiser_4:0 "San Class"
- POL_battle_cruiser_1:0 "Gdańsk Class"
- POL_battle_cruiser_2:0 "Cieszyn Class"
- POL_battleship_1:0 "Piast Class"
- POL_battleship_2:0 "Przemyślid Class"
- POL_battleship_3:0 "Andegawen Class"
- POL_battleship_4:0 "Jagiellon Class"
- POL_SH_battleship_1:0 "Piłsudski Class"
- POL_SH_battleship_2:0 "Poniatowski Class"
- POL_carrier_1:0 "Jan Sobieski Class"
- POL_carrier_2:0 "Zygmunt Waza Class"
- POL_carrier_3:0 "Stanisław August Class"
- POL_carrier_4:0 "Fryderyk August Class"
+ POL_destroyer_4:0 "부자급"
+ POL_light_cruiser_1:0 "바르샤바급"
+ POL_light_cruiser_2:0 "우치급"
+ POL_light_cruiser_3:0 "르부프급"
+ POL_light_cruiser_4:0 "포즈난급"
+ POL_heavy_cruiser_1:0 "니에멘급"
+ POL_heavy_cruiser_2:0 "비스와급"
+ POL_heavy_cruiser_3:0 "주크급"
+ POL_heavy_cruiser_4:0 "산급"
+ POL_battle_cruiser_1:0 "그단스크급"
+ POL_battle_cruiser_2:0 "치에신급"
+ POL_battleship_1:0 "피아스트급"
+ POL_battleship_2:0 "프셰미실리트급"
+ POL_battleship_3:0 "안데가벤급"
+ POL_battleship_4:0 "야기엘론급"
+ POL_SH_battleship_1:0 "피우수트스키급"
+ POL_SH_battleship_2:0 "포니아토프스키급"
+ POL_carrier_1:0 "얀 소비에스키급"
+ POL_carrier_2:0 "지그문트 바자급"
+ POL_carrier_3:0 "스타니스와프 아우구스트급"
+ POL_carrier_4:0 "프리데리크 아우구스트급"
  #EAT MY ASSHOLE GITHUB
