--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -182,7 +182,7 @@
  VICTORY_POINTS_121:0 "야로슬라블"
  VICTORY_POINTS_306:0 "스몰렌스크"
  VICTORY_POINTS_413:0 "보로네시"
- VICTORY_POINTS_418:0 "카리프"
+ VICTORY_POINTS_418:0 "하리코프"
  VICTORY_POINTS_957:0 "블라디보스토크"
  VICTORY_POINTS_1278:0 "우파"
  VICTORY_POINTS_1459:0 "타슈켄트"
@@ -234,66 +234,66 @@
  VICTORY_POINTS_1071:0 "엘-알라메인"
  VICTORY_POINTS_7011:0 "카이로"
  VICTORY_POINTS_4709:0 "우루무치"
- VICTORY_POINTS_5033:0 "Lhasa"
- VICTORY_POINTS_11913:0 "Nanjing"
- VICTORY_POINTS_6999:0 "Chongqing"
- VICTORY_POINTS_7014:0 "Shanghai"
- VICTORY_POINTS_9843:0 "Beijing"
- VICTORY_POINTS_1047:0 "Guangzhou"
- VICTORY_POINTS_1069:0 "Jinan"
- VICTORY_POINTS_3992:0 "Nanchang"
- VICTORY_POINTS_4196:0 "Fuzhou"
- VICTORY_POINTS_4504:0 "Guiyang"
- VICTORY_POINTS_4619:0 "Wuhan"
- VICTORY_POINTS_4925:0 "Chengdu"
- VICTORY_POINTS_7071:0 "Xiamen"
- VICTORY_POINTS_7097:0 "Changsha"
- VICTORY_POINTS_7101:0 "Changde"
- VICTORY_POINTS_7137:0 "Nanning"
- VICTORY_POINTS_7191:0 "Hangzhou"
- VICTORY_POINTS_7222:0 "Hefei"
- VICTORY_POINTS_9958:0 "Zhengzhou"
- VICTORY_POINTS_10000:0 "Qingdao"
- VICTORY_POINTS_10068:0 "Tianjin"
- VICTORY_POINTS_10404:0 "Guilin"
- VICTORY_POINTS_12299:0 "Singapore"
- VICTORY_POINTS_1330:0 "Rangoon"
- VICTORY_POINTS_1492:0 "Mandalay"
- VICTORY_POINTS_4425:0 "Myitkyina"
- VICTORY_POINTS_7329:0 "Kota Bharu"
- VICTORY_POINTS_10062:0 "Hong Kong"
- VICTORY_POINTS_10297:0 "Kuala Lumpur"
- VICTORY_POINTS_7408:0 "Bangkok"
- VICTORY_POINTS_1488:0 "Chiang Mai"
- VICTORY_POINTS_7236:0 "Hat Yai"
- VICTORY_POINTS_10438:0 "Nakhon Ratchasima"
- VICTORY_POINTS_4075:0 "Hanoi"
- VICTORY_POINTS_4401:0 "Saigon"
- VICTORY_POINTS_1182:0 "Tokyo"
- VICTORY_POINTS_7072:0 "Osaka"
- VICTORY_POINTS_1025:0 "Kokura"
- VICTORY_POINTS_1092:0 "Hiroshima"
- VICTORY_POINTS_1117:0 "Niigata"
- VICTORY_POINTS_4102:0 "Kagoshima"
- VICTORY_POINTS_6994:0 "Aomori"
- VICTORY_POINTS_7087:0 "Shizuoka"
- VICTORY_POINTS_7169:0 "Sendai"
- VICTORY_POINTS_7197:0 "Kochi"
- VICTORY_POINTS_9950:0 "Nagasaki"
- VICTORY_POINTS_10032:0 "Kanazawa"
- VICTORY_POINTS_10125:0 "Nagoya"
- VICTORY_POINTS_10444:0 "Sapporo"
- VICTORY_POINTS_12421:0 "Asahigawa"
- VICTORY_POINTS_12446:0 "Toyohara"
- VICTORY_POINTS_11932:0 "Naha"
- VICTORY_POINTS_1150:0 "Dalian"
- VICTORY_POINTS_4572:0 "Hsinking"
- VICTORY_POINTS_4052:0 "Pyongyang"
- VICTORY_POINTS_4056:0 "Pusan"
- VICTORY_POINTS_7125:0 "Seoul"
- VICTORY_POINTS_7186:0 "Taipei"
- VICTORY_POINTS_10433:0 "Harbin"
- VICTORY_POINTS_11771:0 "Mukden"
+ VICTORY_POINTS_5033:0 "라싸"
+ VICTORY_POINTS_11913:0 "난징"
+ VICTORY_POINTS_6999:0 "충칭"
+ VICTORY_POINTS_7014:0 "상하이"
+ VICTORY_POINTS_9843:0 "베이징"
+ VICTORY_POINTS_1047:0 "광저우"
+ VICTORY_POINTS_1069:0 "지난"
+ VICTORY_POINTS_3992:0 "난창"
+ VICTORY_POINTS_4196:0 "푸저우"
+ VICTORY_POINTS_4504:0 "구이양"
+ VICTORY_POINTS_4619:0 "우한"
+ VICTORY_POINTS_4925:0 "청두"
+ VICTORY_POINTS_7071:0 "샤먼"
+ VICTORY_POINTS_7097:0 "창사"
+ VICTORY_POINTS_7101:0 "창더"
+ VICTORY_POINTS_7137:0 "난닝"
+ VICTORY_POINTS_7191:0 "항저우"
+ VICTORY_POINTS_7222:0 "허페이"
+ VICTORY_POINTS_9958:0 "정저우"
+ VICTORY_POINTS_10000:0 "칭다오"
+ VICTORY_POINTS_10068:0 "톈진"
+ VICTORY_POINTS_10404:0 "구이린"
+ VICTORY_POINTS_12299:0 "싱가포르"
+ VICTORY_POINTS_1330:0 "랑군"
+ VICTORY_POINTS_1492:0 "만달레이"
+ VICTORY_POINTS_4425:0 "미치나"
+ VICTORY_POINTS_7329:0 "코타바루"
+ VICTORY_POINTS_10062:0 "홍콩"
+ VICTORY_POINTS_10297:0 "쿠알라룸푸르"
+ VICTORY_POINTS_7408:0 "방콕"
+ VICTORY_POINTS_1488:0 "치앙마이"
+ VICTORY_POINTS_7236:0 "핫야이"
+ VICTORY_POINTS_10438:0 "나콘랏차시마"
+ VICTORY_POINTS_4075:0 "하노이"
+ VICTORY_POINTS_4401:0 "사이공"
+ VICTORY_POINTS_1182:0 "도쿄"
+ VICTORY_POINTS_7072:0 "오사카"
+ VICTORY_POINTS_1025:0 "고쿠라"
+ VICTORY_POINTS_1092:0 "히로시마"
+ VICTORY_POINTS_1117:0 "니가타"
+ VICTORY_POINTS_4102:0 "가고시마"
+ VICTORY_POINTS_6994:0 "아오모리"
+ VICTORY_POINTS_7087:0 "시즈오카"
+ VICTORY_POINTS_7169:0 "센다이"
+ VICTORY_POINTS_7197:0 "고치"
+ VICTORY_POINTS_9950:0 "나가사키"
+ VICTORY_POINTS_10032:0 "가나자와"
+ VICTORY_POINTS_10125:0 "나고야"
+ VICTORY_POINTS_10444:0 "삿포로"
+ VICTORY_POINTS_12421:0 "아사히카와"
+ VICTORY_POINTS_12446:0 "토요하라"
+ VICTORY_POINTS_11932:0 "나하"
+ VICTORY_POINTS_1150:0 "다롄"
+ VICTORY_POINTS_4572:0 "신징"
+ VICTORY_POINTS_4052:0 "평양"
+ VICTORY_POINTS_4056:0 "부산"
+ VICTORY_POINTS_7125:0 "서울"
+ VICTORY_POINTS_7186:0 "타이베이"
+ VICTORY_POINTS_10433:0 "하얼빈"
+ VICTORY_POINTS_11771:0 "묵던"
  VICTORY_POINTS_10265:0 "Manila"
  VICTORY_POINTS_1221:0 "Batangas"
  VICTORY_POINTS_1415:0 "Dagupan"
