--- a/USA_l_english.yml
+++ b/USA_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
- USA_william_c_lee:0 "William C. Lee"
- USA_elwood_richard_quesada:0 "Elwood R. Quesada"
+ USA_william_c_lee:0 "윌리엄 C. 리"
+ USA_elwood_richard_quesada:0 "엘우드 R. 퀘사다"
 
  USA_curtiss_wright:0 "커티스 라이트"
  USA_claude_shannon:0 "클로드 섀넌"
  USA_waco:0 "WACO"
  
- r56_USA_decision_the_jumping_general:0 "The Jumping General"
+ r56_USA_decision_the_jumping_general:0 "낙하 장군"
