--- a/Siam2_l_english.yml
+++ b/Siam2_l_english.yml
@@ -7,23 +7,23 @@
   #Siam Commercial Bank (if needed)
   
   # Custom Tags
-  SIA_R56_democratic:0 "Siam"
-  SIA_R56_democratic_DEF:0 "Siam"
-  SIA_R56_fascism:0 "Siam"
-  SIA_R56_fascism_DEF:0 "Siam"
-  SIA_R56_neutrality:0 "Siam"
-  SIA_R56_neutrality_DEF:0 "Siam"
-  SIA_R56_communist:0 "People's Republic Of Siam"
-  SIA_R56_communist_DEF:0 "Siam"
+  SIA_R56_democratic:0 "시암"
+  SIA_R56_democratic_DEF:0 "시암"
+  SIA_R56_fascism:0 "시암"
+  SIA_R56_fascism_DEF:0 "시암"
+  SIA_R56_neutrality:0 "시암"
+  SIA_R56_neutrality_DEF:0 "시암"
+  SIA_R56_communist:0 "시암 인민 공화국"
+  SIA_R56_communist_DEF:0 "시암"
 
-  SIA_Thailand_democratic:0 "Thailand"
-  SIA_Thailand_democratic_DEF:0 "The Republic Of Thailand"
-  SIA_Thailand_fascism:0 "Thailand"
-  SIA_Thailand_fascism_DEF:0 "Thailand"
-  SIA_Thailand_communism:0 "People's Republic Of Thailand"
-  SIA_Thailand_communism_DEF:0 "The People's Republic Of Thailand"
-  SIA_Thailand_neutrality:0 "Thailand"
-  SIA_Thailand_neutrality_DEF:0 "The Kingdom Of Thailand"
+  SIA_Thailand_democratic:0 "타이"
+  SIA_Thailand_democratic_DEF:0 "타이 공화국"
+  SIA_Thailand_fascism:0 "타이"
+  SIA_Thailand_fascism_DEF:0 "타이"
+  SIA_Thailand_communism:0 "타이 인민 공화국"
+  SIA_Thailand_communism_DEF:0 "타이 인민 공화국"
+  SIA_Thailand_neutrality:0 "타이"
+  SIA_Thailand_neutrality_DEF:0 "타이 왕국"
 
  # Parties Names
   SIA_fascism_party:0 "Khana Ratsadon (M-R)"
