--- a/MEX_l_english.yml
+++ b/MEX_l_english.yml
@@ -921,24 +921,24 @@
  para_tech:0 "Paratroopers"
  
  ###NAMES
- MEX_fascism:0 "Synarchist Mexico"
- MEX_fascism_DEF:0 "Synarchist Mexico"
- MEX_democratic:0 "United Mexican States"
- MEX_democratic_DEF:0 "United Mexican States"
- MEX_neutrality:0 "Mexico"
- MEX_neutrality_DEF:0 "Mexico"
- MEX_communism:0 "Mexican Syndicalist Republic"
- MEX_communism_DEF:0 "Mexican Syndicalist Republic"
- MEX_fascism_ADJ:0 "Mexican"
- MEX_democratic_ADJ:0 "Mexican"
- MEX_neutrality_ADJ:0 "Mexican"
- MEX_communism_ADJ:0 "Mexican"
- USA_MEX_autonomy_dominion:0 "Dominion of North America"
- USA_MEX_autonomy_colony:0 "41 Colonies"
- USA_MEX_autonomy_puppet:0 "Mexican North American Territories"
- USA_MEX_autonomy_dominion_DEF:0 "the Dominion of North America"
- USA_MEX_autonomy_colony_DEF:0 "the 41 Colonies"
- USA_MEX_autonomy_puppet_DEF:0 "the Mexican North American Territories"
+ MEX_fascism:0 "시나키스트 멕시코"
+ MEX_fascism_DEF:0 "시나키스트 멕시코"
+ MEX_democratic:0 "멕시코 합중국"
+ MEX_democratic_DEF:0 "멕시코 합중국"
+ MEX_neutrality:0 "멕시코"
+ MEX_neutrality_DEF:0 "멕시코"
+ MEX_communism:0 "멕시코 생디칼리즘 공화국"
+ MEX_communism_DEF:0 "멕시코 생디칼리즘 공화국"
+ MEX_fascism_ADJ:0 "멕시코"
+ MEX_democratic_ADJ:0 "멕시코"
+ MEX_neutrality_ADJ:0 "멕시코"
+ MEX_communism_ADJ:0 "멕시코"
+ USA_MEX_autonomy_dominion:0 "북아메리카 자치령"
+ USA_MEX_autonomy_colony:0 "41번 식민지"
+ USA_MEX_autonomy_puppet:0 "멕시코 북아메리카 구역"
+ USA_MEX_autonomy_dominion_DEF:0 "북아메리카 자치령"
+ USA_MEX_autonomy_colony_DEF:0 "41번 식민지"
+ USA_MEX_autonomy_puppet_DEF:0 "멕시코 북아메리카 구역"
  
  ###OPINIONS + MISC
  
