--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -294,59 +294,59 @@
  VICTORY_POINTS_7186:0 "타이베이"
  VICTORY_POINTS_10433:0 "하얼빈"
  VICTORY_POINTS_11771:0 "묵던"
- VICTORY_POINTS_10265:0 "Manila"
- VICTORY_POINTS_1221:0 "Batangas"
- VICTORY_POINTS_1415:0 "Dagupan"
- VICTORY_POINTS_4241:0 "Davao"
- VICTORY_POINTS_4288:0 "Calapan"
- VICTORY_POINTS_12118:0 "Cebu"
- VICTORY_POINTS_12213:0 "Aparri"
- VICTORY_POINTS_7381:0 "Batavia"
- VICTORY_POINTS_4608:0 "Soerabaja"
- VICTORY_POINTS_4652:0 "Medan"
- VICTORY_POINTS_10237:0 "Balikpapan"
- VICTORY_POINTS_10263:0 "Makassar"
- VICTORY_POINTS_12268:0 "Palembang"
- VICTORY_POINTS_12371:0 "Hollandia"
- VICTORY_POINTS_7859:0 "Canberra"
- VICTORY_POINTS_7798:0 "Melbourne"
- VICTORY_POINTS_12406:0 "Sydney"
- VICTORY_POINTS_1652:0 "Perth"
- VICTORY_POINTS_7520:0 "Newcastle"
- VICTORY_POINTS_7564:0 "Brisbane"
- VICTORY_POINTS_7566:0 "Townsville"
- VICTORY_POINTS_7669:0 "Darwin"
- VICTORY_POINTS_12910:0 "Adelaide"
- VICTORY_POINTS_1814:0 "Wellington"
- VICTORY_POINTS_2197:0 "Christchurch"
- VICTORY_POINTS_2211:0 "Dunedin"
- VICTORY_POINTS_4543:0 "Auckland"
- VICTORY_POINTS_1349:0 "Bombay"
- VICTORY_POINTS_2086:0 "Delhi"
- VICTORY_POINTS_4245:0 "Calcutta"
- VICTORY_POINTS_10278:0 "Madras"
- VICTORY_POINTS_4987:0 "Kathmandu"
- VICTORY_POINTS_8010:0 "Punakha"
- VICTORY_POINTS_2097:0 "Baghdad"
- VICTORY_POINTS_2089:0 "Basrah"
- VICTORY_POINTS_10106:0 "Mosul"
- VICTORY_POINTS_10760:0 "Muscat"
- VICTORY_POINTS_10840:0 "Sana'a"
- VICTORY_POINTS_12727:0 "Riyadh"
- VICTORY_POINTS_792:0 "Beirut"
- VICTORY_POINTS_4111:0 "Damascus"
- VICTORY_POINTS_12473:0 "Aleppo"
- VICTORY_POINTS_1086:0 "Jerusalem"
- VICTORY_POINTS_7151:0 "Amman"
- VICTORY_POINTS_10837:0 "Tehran"
- VICTORY_POINTS_1896:0 "Tabriz"
- VICTORY_POINTS_2026:0 "Isfahan"
- VICTORY_POINTS_5029:0 "Mashhad"
- VICTORY_POINTS_7953:0 "Ahvaz"
- VICTORY_POINTS_8117:0 "Shiraz"
- VICTORY_POINTS_10913:0 "Kerman"
- VICTORY_POINTS_10737:0 "Kabul"
- VICTORY_POINTS_4893:0 "Herat"
+ VICTORY_POINTS_10265:0 "마닐라"
+ VICTORY_POINTS_1221:0 "바탕가스"
+ VICTORY_POINTS_1415:0 "다구판"
+ VICTORY_POINTS_4241:0 "다바오"
+ VICTORY_POINTS_4288:0 "칼라판"
+ VICTORY_POINTS_12118:0 "세부"
+ VICTORY_POINTS_12213:0 "아파리"
+ VICTORY_POINTS_7381:0 "바타비아"
+ VICTORY_POINTS_4608:0 "수라바야"
+ VICTORY_POINTS_4652:0 "메단"
+ VICTORY_POINTS_10237:0 "발릭파판"
+ VICTORY_POINTS_10263:0 "마카사르"
+ VICTORY_POINTS_12268:0 "팔렘방"
+ VICTORY_POINTS_12371:0 "홀란디아"
+ VICTORY_POINTS_7859:0 "캔버라"
+ VICTORY_POINTS_7798:0 "멜버른"
+ VICTORY_POINTS_12406:0 "시드니"
+ VICTORY_POINTS_1652:0 "퍼스"
+ VICTORY_POINTS_7520:0 "뉴캐슬"
+ VICTORY_POINTS_7564:0 "브리즈번"
+ VICTORY_POINTS_7566:0 "타운스빌"
+ VICTORY_POINTS_7669:0 "다윈"
+ VICTORY_POINTS_12910:0 "애들레이드"
+ VICTORY_POINTS_1814:0 "웰링턴"
+ VICTORY_POINTS_2197:0 "크라이스트처치"
+ VICTORY_POINTS_2211:0 "더니든"
+ VICTORY_POINTS_4543:0 "오클랜드"
+ VICTORY_POINTS_1349:0 "봄베이"
+ VICTORY_POINTS_2086:0 "델리"
+ VICTORY_POINTS_4245:0 "캘커타"
+ VICTORY_POINTS_10278:0 "마드라스"
+ VICTORY_POINTS_4987:0 "카트만두"
+ VICTORY_POINTS_8010:0 "푸나카"
+ VICTORY_POINTS_2097:0 "바그다드"
+ VICTORY_POINTS_2089:0 "바스라"
+ VICTORY_POINTS_10106:0 "모술"
+ VICTORY_POINTS_10760:0 "무스카트"
+ VICTORY_POINTS_10840:0 "사나"
+ VICTORY_POINTS_12727:0 "리야드"
+ VICTORY_POINTS_792:0 "베이루트"
+ VICTORY_POINTS_4111:0 "다마스커스"
+ VICTORY_POINTS_12473:0 "알레포"
+ VICTORY_POINTS_1086:0 "예루살렘"
+ VICTORY_POINTS_7151:0 "암만"
+ VICTORY_POINTS_10837:0 "테헤란"
+ VICTORY_POINTS_1896:0 "타브리즈"
+ VICTORY_POINTS_2026:0 "이스파한"
+ VICTORY_POINTS_5029:0 "마슈하드"
+ VICTORY_POINTS_7953:0 "아바즈"
+ VICTORY_POINTS_8117:0 "시라즈"
+ VICTORY_POINTS_10913:0 "케르만"
+ VICTORY_POINTS_10737:0 "카불"
+ VICTORY_POINTS_4893:0 "헤라트"
  VICTORY_POINTS_3957:0 "Washington"
  VICTORY_POINTS_3878:0 "New York"
  VICTORY_POINTS_9450:0 "Chicago"
