--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -20,20 +20,20 @@
  NIR_antrim_torpedo_factory:0 "Antrim Torpedo Factory"
  NIR_antrim_torpedo_factory_aviation:0 "Antrim Torpedo Factory"
  
- IRE_emergency:0 "Emergency Powers Act"
- IRE_emergency_desc:0 "War sweeps Europe, and Ireland is in danger. We must declare a state of emergency and protect the Irish state."
- IRE_neut:0 "Declare Irish Neutrality"
- IRE_neut_desc:0 "We will declare Ireland as neutral in this conflict, though many in Ireland harbor anti-facsist sentiments and some even sympathise with them out of spite for the British"
- IRE_iraban:0 "Offenses Against The State Act"
- IRE_iraban_desc:0 "The IRA have been permitted to exist since the civil war, but with the threat of war looming over Ireland, this can be permitted no longer. We will arrest prominent IRA members and disarm them."
- IRE_war:0 "Prepare For War"
- IRE_war_desc:0 "The Irish people clamor for revenge against the British, and with a storm gathering across Europe, Britain is crumbling. Ireland will not sit idly by while Europe erupts, we shall go to war!"
- IRE_opkath:0 "Operation Kathleen"
- IRE_opkath_desc:0 "With the IRA back in the fold, we have discovered a plan they had drawn up with the Germans, to invade Northern Ireland. It is possible we could use this plan ourselves, if we secure German protection."
- IRE_planw:0 "Plan W"
- IRE_planw_desc:0 "German aggression has not gone unnoticed. The British have come to us with secured intelligence detailing a German invasion of Britain, named Operation Sea Lion, and even of Ireland, Operation Green. We must take steps to protect against this, even if it means aligning with the Allies."
- IRE_irapower:0 "Empower The Blueshirts"
- IRE_irapower_desc:0 "With Ireland deciding to go to war, the Blueshirts have become restless. We may quell them, however, with diplomacy, as they are sympathetic to our cause we may integrate them with our army and use their experience of guerrilla tactics."
+ IRE_emergency:0 "비상대권법"
+ IRE_emergency_desc:0 "전쟁은 온 유럽을 휩쓸고 있고, 아일랜드는 위험에 빠졌습니다. 우리는 비상사태를 선포하고 아일랜드를 보호해야만 합니다."
+ IRE_neut:0 "아일랜드 중립 선언"
+ IRE_neut_desc:0 "우리는 아일랜드의 많은 사람들이 반파시즘 정서를 가지고 있고 심지어 어떤 사람들은 영국인들에게 공감하고 그들을 동정하지만, 이 분쟁에서 아일랜드는 중립을 선언할 것입니다."
+ IRE_iraban:0 "국가반역법"
+ IRE_iraban_desc:0 "IRA는 내전 이후 존재가 허용되었지만, 아일랜드에 전쟁의 위협이 대두되면서 이들은 더 이상 허용되지 않을 것입니다. 우리는 저명한 IRA 회원들을 체포하고 무장해제시킬 것입니다."
+ IRE_war:0 "전쟁 준비"
+ IRE_war_desc:0 "아일랜드 사람들은 영국에 대한 복수를 외치고 있으며, 유럽 전역으로 폭풍이 몰려들면서 영국은 무너지고 있다. 아일랜드는 유럽이 폭발하는 동안 가만히 앉아 있지 않을 것입니다. 우리는 전쟁에 나갈 것입니다!"
+ IRE_opkath:0 "캐슬린 작전"
+ IRE_opkath_desc:0 "IRA가 다시 잡혀 들어가 있는 상황에서, 우리는 그들이 독일인들과 함께 작성한 북아일랜드 침략 계획을 발견했습니다. 만약 우리가 독일의 보호를 확보한다면, 우리가 이 계획을 직접 사용할 수 있을 것입니다."
+ IRE_planw:0 "W 계획"
+ IRE_planw_desc:0 "독일의 공격성은 눈에 띄지 않게 사라지지 않고있습니다. 영국인들은 독일군의 영국 침략을 상세히 기록한 바다사자 작전과 아일랜드에 대한 침략 계획인 녹색 작전을 상세히 기록한 확실한 정보를 가지고 우리에게 왔습니다. 비록 그것이 연합군과 제휴하는 것을 의미하더라도, 우리는 이를 막기 위한 조치를 취해야 합니다."
+ IRE_irapower:0 "청의사들에게 힘을"
+ IRE_irapower_desc:0 "아일랜드가 전쟁을 하기로 결정함에 따라 청의사들은 안절부절못하게 되었습니다. 그러나 우리는 외교로 그들을 진정시킬 수 있습니다. 그들이 우리의 대의에 공감하고 있기 때문입니다. 우리는 그들을 우리 군대와 통합하고 게릴라 전술의 경험을 사용할 수 있습니다."
  IRE_axisalign:0 "Align With Axis"
  IRE_axisalign_desc:0 "If we plan to go to war with Britain, we cannot do so alone. Ireland must align itself with the Axis powers and hopefully seek an alliance to reclaim Northern Ireland."
  IRE_unite:0 "Ireland United"
