--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -34,15 +34,15 @@
  IRE_planw_desc:0 "독일의 공격성은 눈에 띄지 않게 사라지지 않고있습니다. 영국인들은 독일군의 영국 침략을 상세히 기록한 바다사자 작전과 아일랜드에 대한 침략 계획인 녹색 작전을 상세히 기록한 확실한 정보를 가지고 우리에게 왔습니다. 비록 그것이 연합군과 제휴하는 것을 의미하더라도, 우리는 이를 막기 위한 조치를 취해야 합니다."
  IRE_irapower:0 "청의사들에게 힘을"
  IRE_irapower_desc:0 "아일랜드가 전쟁을 하기로 결정함에 따라 청의사들은 안절부절못하게 되었습니다. 그러나 우리는 외교로 그들을 진정시킬 수 있습니다. 그들이 우리의 대의에 공감하고 있기 때문입니다. 우리는 그들을 우리 군대와 통합하고 게릴라 전술의 경험을 사용할 수 있습니다."
- IRE_axisalign:0 "Align With Axis"
- IRE_axisalign_desc:0 "If we plan to go to war with Britain, we cannot do so alone. Ireland must align itself with the Axis powers and hopefully seek an alliance to reclaim Northern Ireland."
- IRE_unite:0 "Ireland United"
- IRE_unite_desc:0 "Since the War of Independence in 1921, we have sought the unification of Ireland. Now, as war looms on the world, and Britain is left weaker, it is time to realize this goal!"
- IRE_ourpeople:0 "They Are Our People"
+ IRE_axisalign:0 "추축국과 함께"
+ IRE_axisalign_desc:0 "영국과의 전쟁을 계획한다면 우리 혼자서 할 수는 없다. 아일랜드는 추축국들과 협력해야 하며 희망컨대 북아일랜드의 영유권 재주장을 위한 동맹을 모색해야 한다."
+ IRE_unite:0 "하나된 아일랜드"
+ IRE_unite_desc:0 "1921년 독립전쟁 이후 우리는 아일랜드의 통일을 추구해왔습니다. 이제, 전 세계에 전쟁이 다가오고 영국은 더 약해진 채로 있으니, 이 목표를 실현해야 할 때입니다!"
+ IRE_ourpeople:0 "그들은 우리 국민이다"
  IRE_ourpeople_desc:0 "The Belfast Blitz, though targeted at Northern Ireland and the British, was an attack on Irish soil and against Irish people. They are our people - we are one and the same people - and their sorrows in the present instance are also our sorrows."
- IRE_malcmcdonald:0 "Malcolm MacDonald"
+ IRE_malcmcdonald:0 "말콤 맥도날드"
  IRE_malcmcdonald_desc:0 "Malcolm MacDonald, who negotiated with the Irish Free State in 1937 to settle trade disputes, has returned to Ireland with an intriguing offer." 
- IRE_pol:0 "Consitution Of Ireland"
+ IRE_pol:0 "아일랜드 헌법"
  IRE_pol_desc:0 "We must create a constitution to establish the Oireachtas' rule over Ireland. This constitution will fully cement the Irish state as 'Ireland'"
  IRE_nat:0 "National Corporate Party"
  IRE_nat_desc:0 "The National Corporate Party, lead by Eoin O' Duffy and his Greenshirts, are rising in popularity. They promise a stronger Ireland, and promise to remove the communists."
