--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -347,64 +347,64 @@
  VICTORY_POINTS_10913:0 "케르만"
  VICTORY_POINTS_10737:0 "카불"
  VICTORY_POINTS_4893:0 "헤라트"
- VICTORY_POINTS_3957:0 "Washington"
- VICTORY_POINTS_3878:0 "New York"
- VICTORY_POINTS_9450:0 "Chicago"
- VICTORY_POINTS_9814:0 "Los Angeles"
- VICTORY_POINTS_10337:0 "Houston"
- VICTORY_POINTS_788:0 "Norfolk"
- VICTORY_POINTS_853:0 "Phoenix"
- VICTORY_POINTS_1562:0 "San Diego"
- VICTORY_POINTS_1595:0 "Indianapolis"
- VICTORY_POINTS_1690:0 "Spokane"
- VICTORY_POINTS_1747:0 "Rapid City"
- VICTORY_POINTS_1770:0 "Des Moines"
- VICTORY_POINTS_1806:0 "Tulsa"
- VICTORY_POINTS_1827:0 "Denver"
- VICTORY_POINTS_1836:0 "Bismarck"
- VICTORY_POINTS_1843:0 "Miami"
- VICTORY_POINTS_1866:0 "Minneapolis"
- VICTORY_POINTS_3960:0 "Dallas"
- VICTORY_POINTS_4569:0 "Saint Louis"
- VICTORY_POINTS_4860:0 "Great Falls"
- VICTORY_POINTS_4865:0 "Salt Lake City"
- VICTORY_POINTS_6696:0 "Louisville"
- VICTORY_POINTS_6710:0 "Detroit"
- VICTORY_POINTS_6732:0 "Boston"
- VICTORY_POINTS_6845:0 "Philadelphia"
- VICTORY_POINTS_6855:0 "Columbus"
- VICTORY_POINTS_6890:0 "Cleveland"
- VICTORY_POINTS_7138:0 "Charlotte"
- VICTORY_POINTS_7202:0 "Charleston"
- VICTORY_POINTS_7315:0 "Seattle"
- VICTORY_POINTS_7480:0 "Mobile"
- VICTORY_POINTS_7552:0 "New Orleans"
- VICTORY_POINTS_9671:0 "San Francisco"
- VICTORY_POINTS_9713:0 "Sacramento"
- VICTORY_POINTS_10370:0 "Springfield"
- VICTORY_POINTS_10717:0 "Kansas City"
- VICTORY_POINTS_11654:0 "Buffalo"
- VICTORY_POINTS_11800:0 "Pittsburgh"
- VICTORY_POINTS_3513:0 "Portland"
- VICTORY_POINTS_12357:0 "Milwaukee"
- VICTORY_POINTS_12384:0 "Atlanta"
- VICTORY_POINTS_12459:0 "Bangor"
- VICTORY_POINTS_12489:0 "Little Rock"
- VICTORY_POINTS_12501:0 "Nashville"
- VICTORY_POINTS_12586:0 "Omaha"
- VICTORY_POINTS_12735:0 "Birmingham"
- VICTORY_POINTS_12782:0 "San Antonio"
- VICTORY_POINTS_13090:0 "Unalaska"
- VICTORY_POINTS_13091:0 "Anchorage"
- VICTORY_POINTS_3778:0 "Ottawa"
- VICTORY_POINTS_3775:0 "Toronto"
- VICTORY_POINTS_1408:0 "Vancouver"
- VICTORY_POINTS_3010:0 "Edmonton"
- VICTORY_POINTS_4345:0 "Montréal"
- VICTORY_POINTS_4872:0 "Winnipeg"
- VICTORY_POINTS_7361:0 "Halifax"
- VICTORY_POINTS_12149:0 "Québec"
- VICTORY_POINTS_1965:0 "Mexico City"
+ VICTORY_POINTS_3957:0 "워싱턴"
+ VICTORY_POINTS_3878:0 "뉴욕"
+ VICTORY_POINTS_9450:0 "시카고"
+ VICTORY_POINTS_9814:0 "로스앤젤레스"
+ VICTORY_POINTS_10337:0 "휴스턴"
+ VICTORY_POINTS_788:0 "노퍽"
+ VICTORY_POINTS_853:0 "피닉스"
+ VICTORY_POINTS_1562:0 "샌디에이고"
+ VICTORY_POINTS_1595:0 "인디애나폴리스"
+ VICTORY_POINTS_1690:0 "스포캔"
+ VICTORY_POINTS_1747:0 "래피드시티"
+ VICTORY_POINTS_1770:0 "디모인"
+ VICTORY_POINTS_1806:0 "털사"
+ VICTORY_POINTS_1827:0 "덴버"
+ VICTORY_POINTS_1836:0 "비스마르크"
+ VICTORY_POINTS_1843:0 "마이애미"
+ VICTORY_POINTS_1866:0 "미니애폴리스"
+ VICTORY_POINTS_3960:0 "댈러스"
+ VICTORY_POINTS_4569:0 "세인트루이스"
+ VICTORY_POINTS_4860:0 "그레이트폴스"
+ VICTORY_POINTS_4865:0 "솔트레이크시티"
+ VICTORY_POINTS_6696:0 "루이빌"
+ VICTORY_POINTS_6710:0 "디트로이트"
+ VICTORY_POINTS_6732:0 "보스턴"
+ VICTORY_POINTS_6845:0 "필라델피아"
+ VICTORY_POINTS_6855:0 "콜럼버스"
+ VICTORY_POINTS_6890:0 "클리블랜드"
+ VICTORY_POINTS_7138:0 "샬럿"
+ VICTORY_POINTS_7202:0 "찰스턴"
+ VICTORY_POINTS_7315:0 "시애틀"
+ VICTORY_POINTS_7480:0 "모빌"
+ VICTORY_POINTS_7552:0 "뉴올리언스"
+ VICTORY_POINTS_9671:0 "샌프란시스코"
+ VICTORY_POINTS_9713:0 "새크라멘토"
+ VICTORY_POINTS_10370:0 "스프링필드"
+ VICTORY_POINTS_10717:0 "캔자스시티"
+ VICTORY_POINTS_11654:0 "버펄로"
+ VICTORY_POINTS_11800:0 "피츠버그"
+ VICTORY_POINTS_3513:0 "포틀랜드"
+ VICTORY_POINTS_12357:0 "밀워키"
+ VICTORY_POINTS_12384:0 "애틀랜타"
+ VICTORY_POINTS_12459:0 "뱅고어"
+ VICTORY_POINTS_12489:0 "리틀록"
+ VICTORY_POINTS_12501:0 "내슈빌"
+ VICTORY_POINTS_12586:0 "오마하"
+ VICTORY_POINTS_12735:0 "버밍엄"
+ VICTORY_POINTS_12782:0 "샌안토니오"
+ VICTORY_POINTS_13090:0 "어널래스카"
+ VICTORY_POINTS_13091:0 "앵커리지"
+ VICTORY_POINTS_3778:0 "오타와"
+ VICTORY_POINTS_3775:0 "토론토"
+ VICTORY_POINTS_1408:0 "밴쿠버"
+ VICTORY_POINTS_3010:0 "에드먼턴"
+ VICTORY_POINTS_4345:0 "몬트리올"
+ VICTORY_POINTS_4872:0 "위니펙"
+ VICTORY_POINTS_7361:0 "핼리팩스"
+ VICTORY_POINTS_12149:0 "퀘벡"
+ VICTORY_POINTS_1965:0 "멕시코시티"
  VICTORY_POINTS_4956:0 "San Luis Potosi"
  VICTORY_POINTS_12810:0 "Veracruz"
  VICTORY_POINTS_12835:0 "Monterrey"
