--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -39,17 +39,17 @@
  IRE_unite:0 "하나된 아일랜드"
  IRE_unite_desc:0 "1921년 독립전쟁 이후 우리는 아일랜드의 통일을 추구해왔습니다. 이제, 전 세계에 전쟁이 다가오고 영국은 더 약해진 채로 있으니, 이 목표를 실현해야 할 때입니다!"
  IRE_ourpeople:0 "그들은 우리 국민이다"
- IRE_ourpeople_desc:0 "The Belfast Blitz, though targeted at Northern Ireland and the British, was an attack on Irish soil and against Irish people. They are our people - we are one and the same people - and their sorrows in the present instance are also our sorrows."
+ IRE_ourpeople_desc:0 "벨파스트 전격전은 북아일랜드와 영국을 목표로 했지만 아일랜드 땅과 아일랜드 사람들에 대한 공격이기도 했습니다. 그들은 우리 민족이며, 우리는 하나이고 같은 민족입니다. 그리고 현재 그들의 슬픔은 우리의 슬픔이기도 합니다."
  IRE_malcmcdonald:0 "말콤 맥도날드"
- IRE_malcmcdonald_desc:0 "Malcolm MacDonald, who negotiated with the Irish Free State in 1937 to settle trade disputes, has returned to Ireland with an intriguing offer." 
+ IRE_malcmcdonald_desc:0 "1937년 아일랜드 자유국과 무역 분쟁을 해결하기 위해 협상을 벌였던 말콤 맥도날드가 흥미진진한 제의를 가지고 아일랜드로 돌아왔습니다." 
  IRE_pol:0 "아일랜드 헌법"
- IRE_pol_desc:0 "We must create a constitution to establish the Oireachtas' rule over Ireland. This constitution will fully cement the Irish state as 'Ireland'"
- IRE_nat:0 "National Corporate Party"
- IRE_nat_desc:0 "The National Corporate Party, lead by Eoin O' Duffy and his Greenshirts, are rising in popularity. They promise a stronger Ireland, and promise to remove the communists."
- IRE_com:0 "Irish Worker League"
- IRE_com_desc:0 "The Irish Worker League, lead by James Larkin, also known as 'Big Jim', the General Secretary of the Workers' Union. They promise better rights for workers."
- IRE_mob:0 "Mobilize The Irish Defence Forces"
- IRE_mob_desc:0 "The Defence Forces Act of 1923 gave way to the Defence Forces, remnants of the army used in the civil war, to be used to defend Ireland from external and internal threats. Now it is time to mobilize them."
+ IRE_pol_desc:0 "우리는 아일랜드에 대한 에러크터스의 통치를 확립하기 위해 헌법을 만들어야만 합니다. 이 헌법은 아일랜드인들이 사는 곳을 '아일랜드'라는 하나의 국가로 완전히 굳힐 것입니다."
+ IRE_nat:0 "국가조합당"
+ IRE_nat_desc:0 "이오인 오더피와 그의 녹색셔츠들이 이끄는 민족기업당은, 점점 세를 불려다가고 있습니다. 그들은 더 강한 아일랜드를 약속했으며, 공산주의자들을 제거할 것 또한 약속했습니다."
+ IRE_com:0 "아일랜드 노동자 연맹"
+ IRE_com_desc:0 "노동조합의 총서기이자 '빅 짐' 이라는 별명으로도 알려진 제임스 라킨이 이끄는 아일랜드 노동자 연맹을 이끌고 있습니다. 이들은 노동자들에게 더 나은 권리를 약속합니다."
+ IRE_mob:0 "아일랜드 방위군 동원"
+ IRE_mob_desc:0 "1923년의 방위군법은 내전에서 사용된 군대의 잔해물인 방위군의 사용처를 마련해 주었고, 이는 국내외의 위협으로부터 아일랜드를 지키는 것입니다. 이제 그들을 동원할 시간입니다."
  IRE_armyone:0 "An Chéad Chathlán Coisithe"
  IRE_armyone_desc:0 "We have a small Defence Force, but if we are going to defend Ireland against its enemies, we must innovate."
  IRE_armytwo:0 "National Army"
