--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -50,10 +50,10 @@
  IRE_com_desc:0 "노동조합의 총서기이자 '빅 짐' 이라는 별명으로도 알려진 제임스 라킨이 이끄는 아일랜드 노동자 연맹을 이끌고 있습니다. 이들은 노동자들에게 더 나은 권리를 약속합니다."
  IRE_mob:0 "아일랜드 방위군 동원"
  IRE_mob_desc:0 "1923년의 방위군법은 내전에서 사용된 군대의 잔해물인 방위군의 사용처를 마련해 주었고, 이는 국내외의 위협으로부터 아일랜드를 지키는 것입니다. 이제 그들을 동원할 시간입니다."
- IRE_armyone:0 "An Chéad Chathlán Coisithe"
- IRE_armyone_desc:0 "We have a small Defence Force, but if we are going to defend Ireland against its enemies, we must innovate."
- IRE_armytwo:0 "National Army"
- IRE_armytwo_desc:0 "Since the end of the Civil War and the establishment of the Defence Force, we have been reluctant to have a 'National Army'. Now though, with war approaching, we should rebuild our forces."
+ IRE_armyone:0 "최초의 보병대대"
+ IRE_armyone_desc:0 "우리는 작은 방위군을 가지고 있지만, 적들로부터 아일랜드를 방어하려면 우리는 혁신을 해야만 합니다."
+ IRE_armytwo:0 "국군"
+ IRE_armytwo_desc:0 "내전이 끝나고 방위군이 창설된 이후 우리는 '국군'을 갖기를 꺼려왔습니다. 이제 전쟁이 다가옴에 따라, 우리는 우리의 군대를 재건해야 합니다."
  IRE_armythree:0 "Special Infantry Corps"
  IRE_armythree_desc:0 "After the war, the Special Infantry Corps was established to counter the IRA and socialist threats and break up strikes. Now we can repurpose them for war."
  IRE_tank:0 "Tank Corps"
