--- a/GER_l_english.yml
+++ b/GER_l_english.yml
@@ -60,7 +60,7 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_naval_superiority_english_channel:0 "영국 해협에서의 우월성"
  GER_naval_superiority_english_channel_desc:0 "The only way to escort our weaker landing craft and support a naval invasion is the development of a navy superior to that of the British."
  GER_enact_sealion:0 "바다사자 작전 실행"
- GER_enact_sealion:0 "The time has finally come; we will put our plan to invade Britain into action, and finally remove this thorn that we have harbored for so long."
+ GER_enact_sealion_desc:0 "The time has finally come; we will put our plan to invade Britain into action, and finally remove this thorn that we have harbored for so long."
  GER_alliance_with_italy:0 "이탈리아와의 동맹"
  GER_alliance_with_italy_desc:0 "The italians may be untrustworthy - as they proved in the Great War - but Mussolini and his Fascist movement have shown that there is hope for Italy yet. Surely, Germany only stands to gain by allying with Italy, does it not?"
  GER_prepare_italian_invasion:0 "이탈리아 침공 준비"
