--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -54,49 +54,49 @@
  IRE_armyone_desc:0 "우리는 작은 방위군을 가지고 있지만, 적들로부터 아일랜드를 방어하려면 우리는 혁신을 해야만 합니다."
  IRE_armytwo:0 "국군"
  IRE_armytwo_desc:0 "내전이 끝나고 방위군이 창설된 이후 우리는 '국군'을 갖기를 꺼려왔습니다. 이제 전쟁이 다가옴에 따라, 우리는 우리의 군대를 재건해야 합니다."
- IRE_armythree:0 "Special Infantry Corps"
+ IRE_armythree:0 "특수 보병 부대"
  IRE_armythree_desc:0 "After the war, the Special Infantry Corps was established to counter the IRA and socialist threats and break up strikes. Now we can repurpose them for war."
- IRE_tank:0 "Tank Corps"
+ IRE_tank:0 "전차 군단"
  IRE_tank_desc:0 "Establish and armored component to the armed forces."
- IRE_ccp:0 "Coal-Cattle Pact"
+ IRE_ccp:0 "석탄-소 조약"
  IRE_ccp_desc:0 "To settle the Anglo-Irish trade war, we have agreed a pact with the British allowing better imports and exports of coal and cattle. This should free up some of our industry."
- IRE_treet:0 "Reclaim Treaty Ports"
+ IRE_treet:0 "조약항 회수"
  IRE_treet_desc:0 "After the Irish independence war, we ceded some Irish ports to the British in the peace deal. However, we can reclaim these in our peace deal in the Anglo-Irish trade war to free up more industry for exports."
- IRE_coa:0 "Eire (Confirmation of Agreements) Act"
+ IRE_coa:0 "에이레 (협의 완료) 법"
  IRE_coa_desc:0 "This Act will see the end of the Anglo-Irish trade war, allowing imports and exports to flow between our nations and give much industrial control back to Ireland."
- IRE_magfort:0 "The Magazine Fort"
+ IRE_magfort:0 "매거진 요새"
  IRE_magfort_desc:0 "The Magazine Fort is an ancient fort dating back to 1735. It was given to us in 1922 after the War of Independence, and we can repurpose it as an ammunition store."
- IRE_xmas:0 "Reclaim IRA Munitions"
+ IRE_xmas:0 "IRA 군수품 회수"
  IRE_xmas_desc:0 "The IRA constantly steal from Irish munition stores as terrorist acts against the pro-treaty Government. However, we can seek out cells of the IRA and reclaim these munitions."
- IRE_1stamend:0 "The 1st Amendment"
+ IRE_1stamend:0 "헌법 1차 개정"
  IRE_1stamend_desc:0 "War is certain in Europe and the wounds of the Great War fester in Germany. We must amend our constitution to leave us better equipped for the oncoming storm, granting the Oireachtas the power to declare a state of emergency."
- IRE_air1:0 "The Air Corps"
+ IRE_air1:0 "항공 부대"
  IRE_air1_desc:0 "Closer ties with the United Kingdom allow us to purchase better aircraft from them, which we will need if war is to break out."
- IRE_air2:0 "Goster Gladiators"
+ IRE_air2:0 "글로스터 글래디에이터"
  IRE_air2_desc:0 "War is coming ever closer. We must bolster the Air Corps with aircraft from the United Kingdom, including the Goster Gladiator bi-planes."
- IRE_air3:0 "Hawker Hurricanes"
+ IRE_air3:0 "호커 허리케인"
  IRE_air3_desc:0 "If we are to remain safe from invasion, we must modernize the Air Corps, starting with the Hawker Hurricane fighters."
- IRE_navy1:0 "The Marine and Coastal Service"
+ IRE_navy1:0 "해병 및 해안경비대"
  IRE_navy1_desc:0 "War looms, and if we are to remain neutral as we plan to, we must defend our waters. With the Royal Navy withdrawing from treaty ports, we can re-establish a naval service."
- IRE_navy2:0 "The Marine Service"
+ IRE_navy2:0 "해병대"
  IRE_navy2_desc:0 "The Marine and Coastal Service is growing, and is protecting our waters and civilian vessels, even beyond our coast. We will rename it 'The Marine Service'"
- IRE_navy3:0 "The Naval Service"
+ IRE_navy3:0 "해군"
  IRE_navy3_desc:0 "It is clear the Marine Service is not enough, and so we will disband it and establish the Naval Service as a permanent part of the Defence Forces."
- IRE_inf:0 "Bord na Móna"
+ IRE_inf:0 "보드 나 모나"
  IRE_inf_desc:0 "We must build up Irish infrastructure, as well as stockpiling fuel and providing electricity."
- IRE_nuke:0 "Modernize the ESB"
+ IRE_nuke:0 "ESB 동원"
  IRE_nuke_desc:0 "The Electricity Supply Board was set up by the Irish Free State in 1927. Uranium is fast becoming an alternative to coal, which is in short supply. We should look at adapting the ESB for modern times."
- IRE_secwep:0 "Secret Defence Force"
+ IRE_secwep:0 "비밀 방위군"
  IRE_secwep_desc:0 "With our now modernized Defence Force, we may be able to take steps towards establishing research into secret weapons such as nuclear or rocket technology."
- IRE_rocketeffort:0 "Modern Air Corps"
+ IRE_rocketeffort:0 "현대 항공 군단"
  IRE_rocketeffort_desc:0 "We may look into the possibility of jet technology to truly establish our Air Corps as a significant power in the Defence Forces."
- IRE_indoct:0 "New Oath of Allegiance"
+ IRE_indoct:0 "새로운 충성의 맹세"
  IRE_indoct_desc:0 "Before Article 17 was removed from the constitution, members of the government had to swear an oath to the British king. We may bring that back, with the oath referring to the Irish head of state, to inspire loyalty."
  IRE_fanaticism:0 "Oppose The Anglo-Irish Treaty"
  IRE_fanaticism_desc:0 "With our state now stronger under a unified leadership, we may oppose the Anglo-Irish Treaty and become a self-governing state, free of the British."
- IRE_militarism:0 "Éire Nua"
+ IRE_militarism:0 "새로운 아이레"
  IRE_militarism_desc:0 "Ireland is one nation! And we will ensure it is united. We will reinforce the idea of a new Ireland, a united Ireland, under our Government."
- IRE_youth:0 "Fianna Éireann"
+ IRE_youth:0 "피어너 에런"
  IRE_youth_desc:0 "The Fianna Éireann were a nationalist youth organisation prominent in many events during the build up to the War of Independence - most notably the Easter Rising. We can establish a similair order under our Government to recruit the youth of Ireland."
  IRE_commissars:0 "Oifigeach Polaitiúil"
  IRE_commissars_desc:0 "The Comintern were very influential in James Larkin's rise to power and the establishment of his party. There is much we can learn from the Soviet Union, including their system of political officers."
