--- a/GER_l_english.yml
+++ b/GER_l_english.yml
@@ -193,7 +193,7 @@ GER_deutsche_forschungsanstalt_fur_segelflug_desc:0 "독일 항공 연구소"
  GER_generalplan_ost_II_desc:0 "The slavs of eastern Europe have always interfered with the interests of Germany; it is time that we deal with these issues further and expand our Lebensraum."
  GER_appoint_economic_positions:0 "경제 장관 임명"
  GER_appoint_economic_positions_desc:0 "The only way for Germany to recover from the Great Depression fully is to ensure we have a united economy. This can be facilitated by appointing a president to the Reichsbank and a Minister of Economics."
- GER_two_side_economics:0 "양면 "
+ GER_two_side_economics:0 "양면 경제"
  GER_two_side_economics_desc:0 "There are two groups in the German government vying for power. On one side there are the Technocrats, who believe that placing specialists in places of power and prioritizing industry over military will lead to the most sucessful economy. On the other side, there are the Autarks, who strive for a fully self-sufficient and militarily powerful Germany."
  GER_support_technocrats_I:0 "기술관료들 선택"
  GER_support_technocrats_I_desc:0 "If we want to have an economically powerful Germany, we must side with the Technocrats."
